# raffleAuctionAuditedCode

./: .gitignore  Anchor.toml  README.md  Review.md  package-lock.json  package.json
libraries/: DevEnvironment.ts  JustiesProgramClient.ts  ProgramUtils.ts  Utils.ts
programs/justies/: Cargo.toml
programs/justies/src/: lib.rs
programs/justies/src/admin/: add_currency_token_to_allowlist.rs  add_nft_collection_to_allowlist.rs  init_justies_program.rs  mod.rs  set_mock_timestamp.rs  state.rs  update_configs.rs
programs/justies/src/auction/: cancel_auction.rs  cancel_auction_bid.rs  claim_auction_revenue.rs  claim_lot_nft.rs  create_auction.rs  make_bid.rs  mod.rs  state.rs
programs/justies/src/common/: auction_strategy.rs  bid_strategy.rs  configs_strategy.rs  cpi_utils.rs  eligibility_check_strategy.rs  error_code.rs  mod.rs  pubkey_indexing.rs  raffle_strategy.rs  random_utils.rs  revenue_distribution_strategy.rs  types.rs  utils.rs
programs/justies/src/raffle/: buy_raffle_tickets.rs  cancel_raffle.rs  claim_raffle_revenue.rs  claim_raffle_reward.rs  claim_remaining_raffle_rewards.rs  create_raffle.rs  make_raffle.rs  mod.rs  set_raffle_winners.rs  state.rs
tests/: JustiesTest.ts
