[package]
name = "justies"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "justies"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
getrandom = { version = "0.2.8", features = ["custom"] }
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["metadata"] }
mpl-token-metadata = "1.4.3"
itertools = "0.10.5"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_pcg = "0.3.1"
bit-set = "0.5.3"
wyhash = "0.5.0"
